src/global.css
/* ... */
.SaveIcon {
  color: red;
}

/* ------------------------------- */
/* percentaje loader styles */
.svg circle {
  stroke-dashoffset: 0;
  transition: stroke-dashoffset 1s linear; /* vendorless fallback */
  -o-transition: stroke-dashoffset 1s linear; /* opera */
  -ms-transition: stroke-dashoffset 1s linear; /* IE 10 */
  -moz-transition: stroke-dashoffset 1s linear; /* Firefox */
  -webkit-transition: stroke-dashoffset 1s linear; /*safari and chrome */
  stroke: #666;
  stroke-width: 4px;
}
.svg .bar {
  stroke: #ff9f1e;
}
.cont {
  display: block;
  height: 200px;
  width: 200px;
  border-radius: 100%;
  position: relative;
  margin-top: -190px;
  /* margin-left: -1px; */
  z-index: 4;
}

.profileImage {
  width: 160px;
  height: 160px;
  border-radius: 50%;
  object-fit: cover;
  object-position: center center;
}

.profileImage:hover {
  cursor: pointer;
  box-shadow: 0 0 16px 0 #bebebe;
}
/* .cont:after {
  position: absolute;
  display: block;
  height: 160px;
  width: 160px;
  left: 50%;
  top: 50%;
  content: attr(data-pct) "%";
  margin-top: -85px;
  margin-left: -70px;
  line-height: 160px;
  font-size: 24px;
  color: white;
  text-shadow: 0 0 0.5em black;
} */

/* ----------------------------- */
/* custom overrides */

.customUserStatusTotalPoints {
  display: none;
}

.toolbar-opened .customUserStatusTotalPoints {
  display: flex;
  align-items: center;
}

#SidebarButtonsContainer:hover .customUserStatusTotalPoints {
  display: flex;
  align-items: center;
}

.customUserTotalPoints {
  display: none;
}

.toolbar-opened .customUserTotalPoints {
  display: flex;
}

#SidebarButtonsContainer:hover .customUserTotalPoints {
  display: flex;
}

/* --- */
#SearchQuery {
  padding: 9.5px 14px;
}
#nodeSelect > div > div {
  padding: 10px 10px 10px 13px;
}

/* Toolbar styles */

/* margin-left: -18px; */
.toolbar:focus .toolbarDescription,
.toolbar:hover .toolbarDescription {
  width: 100px;
  display: flex;
  align-items: center;
  visibility: visible;
  line-height: 16px;
  height: 24px;
  /* height: auto; */
  transition: visibility 1s, line-height 1s, height 1s; /* vendorless fallback */
  -o-transition: visibility 1s, line-height 1s, height 1s; /* opera */
  -ms-transition: visibility 1s, line-height 1s, height 1s; /* IE 10 */
  -moz-transition: visibility 1s, line-height 1s, height 1s; /* Firefox */
  -webkit-transition: visibility 1s, line-height 1s, height 1s; /*safari and chrome */
}

.toolbar:focus .toolbarButtonDescription,
.toolbar:hover .toolbarButtonDescription {
  width: 100px;
  display: flex;
  justify-content: center;
  align-items: flex-start;
  visibility: visible;
  line-height: 16px;
  height: 41px;
  transition: visibility 1s, line-height 1s, height 1s; /* vendorless fallback */
  -o-transition: visibility 1s, line-height 1s, height 1s; /* opera */
  -ms-transition: visibility 1s, line-height 1s, height 1s; /* IE 10 */
  -moz-transition: visibility 1s, line-height 1s, height 1s; /* Firefox */
  -webkit-transition: visibility 1s, line-height 1s, height 1s; /*safari and chrome */
}
.toolbar:focus .customUserStatusTotalPoints,
.toolbar:hover .customUserStatusTotalPoints {
  display: flex;
  align-items: center;
}

.toolbar:focus .customUserTotalPoints,
.toolbar:hover .customUserTotalPoints {
  display: flex;
}

.toolbar:hover .show-on-hover {
  display: flex !important;
}

.toolbar:hover .hide-on-hover {
  display: none !important;
}

/* .toolbar:focus .user-status-section,
.toolbar:hover .user-status-section {
  margin-top: 110px !important;
} */

.scroll-styled::-webkit-scrollbar {
  /* CHECK: I add this to hide scroll and have functionality */
  width: 4px;
  height: 4px;
}

.scroll-styled::-webkit-scrollbar-thumb {
  background: rgba(113, 113, 113, 0.663);
  border-radius: 4px;
}
/* scroll-styled */

/* .toolbar:focus .scroll-styled,
.toolbar:hover .scroll-styled {
  display: flex;
  align-items: flex-start;
  margin-left: 10px;
} */

/* table edit component css */

.student-dashboard-table .editable-cell {
  width: 100%;
  padding: 10px;
  border: 1px solid #e2e2e2;
  border-radius: 5px;
  opacity: 0.6;
}

.student-dashboard-table .not-editable-cell {
  pointer-events: none;
}

/* table edit component css */

.student-dashboard-table .editable-cell {
  width: 100%;
  padding: 10px;
  border: 1px solid #e2e2e2;
  border-radius: 5px;
  opacity: 0.6;
}

/* @media (max-width: 600px) {
  .scroll-styled {
    display: flex;
    align-items: flex-start !important;
    margin-left: 10px;
  }
  .fromSideBar {
    display: flex !important;
  }
} */

.select-tab-button-node-footer {
  margin-bottom: -1px;
  height: 39px;
  margin-right: 10px;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
  display: flex;
  border: solid 1px #585858;
  border-bottom: none;
  align-items: center;
  padding: 0px 6px;
  font-weight: 400;
}

.tab-double-button-node-footer {
  border-radius: 52px;
  display: flex;
  margin-right: 10px;
  height: 28.7px;
}

#focused-tabs .MuiTabs-indicator {
  z-index: 9999;
}

.node-footer-buttons-margin {
  margin-bottom: 10px;
}

.tab-double-button-node-footer button:hover {
  box-shadow: none !important;
}

.tab-button-node-footer:hover,
.tab-button-node-footer:active {
  padding: 5px;
  border-radius: 52px !important;
}

.LightMode .policy-content h1,
.LightMode .policy-content h2,
.LightMode .policy-content h3,
.LightMode .policy-content h4,
.LightMode .policy-content li,
.LightMode .policy-content p {
  color: black;
}

